Created function console rock paper scissors game

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Rock Paper Scissors</title>
         <script src="./script.js"></script>
     </head>
     <body>
+        <h1>Open the javascript console</h1>
     </body>
 </html>
