--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Open the javascript console</h1>
+        <h2>And now restart the page</h2>
     </body>
 </html>
